# HazelGameEngine

./: .gitignore  .gitmodules  Hazel.sln  README.md  premake5.lua
Hazel/: CMakeLists.txt  Hazel.aps  Hazel.vcxproj  Hazel.vcxproj.filters  cpp.hint
Hazel/cmake/: StandardProjectSettings.cmake
Hazel/src/: Hazel.h  hzpch.h
Hazel/src/Hazel/: EntryPoint.h  Log.cpp
Hazel/src/Hazel/Core/: Application.cpp  Application.h  Assert.h  Base.h  Core.h  EntryPoint.h  Input.h  Layer.cpp  Layer.h  LayerStack.h  Log.cpp  Log.h  PlatformDetection.h  Timestep.h  Window.cpp  Window.h
Hazel/src/Hazel/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Hazel/src/Hazel/Renderer/: Renderer.h
Hazel/src/Platform/Windows/: WindowsWindow.cpp  WindowsWindow.h
Sandbox/: Sandbox.vcxproj
Sandbox/src/: SandboxApp.cpp
